2008-02-29  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.6


##############################################################################
#                                   1.2.5                                    #
##############################################################################

2008-02-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/utils.cc:
	Resurrected gcmd-block (used only when set "/programs/use_gcmd_block" key to TRUE)

2008-02-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-dir.cc:
	Fixed problem #449137 (renamed directories not accessed by name)

2008-02-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Yet another fix for setting exec dir for started MIME applications

2008-02-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/tags/gnome-cmd-tags-file.cc:
	Do not show password in File.Link tag

	* src/gnome-cmd-file-popmenu.cc:
	Revert the bug introduced in rev. #1575

2008-02-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/utils.cc:
	Set proper exec dir for started MIME applications

	* src/gnome-cmd-file-list.cc:
	Fix for RMB selection

2008-02-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	Allow resizing of bookmark dlg

	* src/Makefile.am:
	* src/gnome-cmd-data.cc:
	* src/utils.cc:
	Fix for problem #448942 (SHIFT+ENTER: running a command in a separate terminal)

2008-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-app.h:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Simplify error handling for MIME retrieving

2008-02-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Fix for crash when handling mime for some exotic permissions

2008-01-28  Piotr Eljasiak  <epiotr@use.pl>
