@@ -1,3 +1,8 @@
+2008-03-04  Piotr Eljasiak  <epiotr@use.pl>
+
+	* doc/C/gnome-commander.xml:
+	Multi-Rename-Tool - new $x and $X placeholders for random hexadecimal numbers
+
 2007-09-20  Piotr Eljasiak  <epiotr@use.pl>
 
 	* doc/C/gnome-commander.xml:
